# pyJoules

./: .gitignore  CITATION.cff  LICENSE  README.md  scenario.md  setup.cfg
.circleci/: config.yml
.github/workflows/: lint_and_test.yml
docs/: API.rst  Device_API.rst  Handler_API.rst  conf.py  generate.sh  index.rst  quickstart.rst  requirements.txt
docs/API/: API.rst  Device_API.rst  Handler_API.rst  main_api.rst
docs/devices/: devices.rst  intel_cpu.rst  nvidia_gpu.rst
docs/handlers/: csv_handler.rst  handlers.rst  mongo_handler.rst  pandas_handler.rst  print_handler.rst
docs/usages/: context_manager.rst  decorator.rst  manual_usage.rst  print_handler.rst  usage.rst
pyJoules/: __init__.py  energy_meter.py  energy_sample.py  energy_state.py  energy_trace.py  exception.py
pyJoules/device/: __init__.py  device.py  device_factory.py  domain.py  nvidia_device.py  rapl_device.py
pyJoules/energy_device/: __init__.py  energy_device.py  energy_device_factory.py  energy_domain.py  nvidia_device.py  rapl_device.py
pyJoules/energy_handler/: __init__.py  csv_handler.py  energy_handler.py  mongo_handler.py  pandas_handler.py  print_handler.py
pyJoules/energy_recorder/: energy_recorder.py
pyJoules/handler/: __init__.py  csv_handler.py  handler.py  mongo_handler.py  pandas_handler.py  print_handler.py
tests/acceptation/: test_measure_trace_with_class.py  test_measure_trace_with_decorator.py  test_measure_trace_with_decorator_output_to_csv_file.py  test_measure_trace_with_energy_context.py  test_measure_trace_with_energy_context_output_to_csv_file.py
(+34 files in other folders)
